chore: change strategy for add timestamp to builds

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
-    "build": "node ./scripts/add-timestamp-to-build.js && ng build --configuration production",
+    "build": "ng build --configuration production && node ./scripts/add-timestamp-to-build.js",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -38,4 +38,3 @@
     "typescript": "~4.9.4"
   }
 }
-
