ci: join jobs to fix a problem

--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
       - ci-setup
 jobs:
-  build:
+  build and deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -28,10 +28,6 @@ jobs:
           npm install
           npm run-script build -- --base-href="/dices-odds-calculator/"
 
-  deploy:
-    needs: build
-    runs-on: ubuntu-latest
-    steps:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
         with:
