--- a/.github/workflows/build-deploy.yml
+++ b/.github/workflows/build-deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Build
         run: |
           npm install
-          npm run-script build -- --base-href=/dices-odds-calculator/
+          npm run-script build -- --base-href="/dices-odds-calculator/"
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v3
